# infrastructure

./: .gitignore  Makefile  README.md  deploy-prod.sh  deploy.yml
iac/: app.py
iac/novialoom_infra/stacks/: compute_stack.py  network_stack.py
services/core-service/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  requirements-local.txt
services/core-service/api/: dependencies.py  embeddings_router.py  llm_router.py
services/core-service/core/embeddings/: __init__.py  embedding_service.py
services/core-service/core/llm/: llm_factory.py  llm_queue_service.py  llm_request.py  llm_response.py  llm_service.py  queued_request.py  request_priority.py
services/core-service/core/llm/providers/: bedrock_provider.py  google_provider.py  llm_provider_base.py  llm_provider_error.py  llm_provider_quota_exceeded_error.py  llm_provider_rate_limit_error.py  llm_provider_timeout_error.py  openai_provider.py
shared/: README.md  __init__.py  pyproject.toml  requirements.txt
shared/api/: __init__.py  api_response.py  paginated_response.py  responses.py
shared/auth/: __init__.py  service_auth.py  service_authenticator.py  service_http_client.py  service_token.py
shared/config/: __init__.py  app_service_settings.py  base_service_settings.py  core_service_settings.py  gateway_service_settings.py  settings.py
shared/dependencies/: __init__.py  base.py  database.py  dependency_container.py  lazy_service_factory.py  service_factory.py
shared/events/: __init__.py  event.py  event_bus.py  event_names.py  event_priority.py
shared/health/: __init__.py  dependency_check.py  health_status.py  router.py
shared/log_config/: __init__.py  config.py
shared/middleware/: __init__.py  cors.py
shared/models/: __init__.py  analysis_request.py  analysis_response.py  base.py  base_response.py  batch_report_request.py  batch_report_status.py  captation_prompt.py  captation_request.py  captation_response.py  error_response.py  llm_request_model.py  llm_response_model.py  output_format_enum.py  service_status.py  store_basic.py  theme.py
shared/novialoom_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
specs/: AWS_MIGRATION_SPEC.md  LAMBDA_API_GATEWAY_SPEC.md  MIGRATION_CODE_GUIDE.md
swagger/: openapi.yaml
templates/: Dockerfile.lambda
