[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novialoom-shared"
version = "1.0.0"
description = "Shared package for Novialoom microservices - Common utilities, models, and configuration"
authors = [{name = "Novialoom Team", email = "team@novialoom.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "PyJWT>=2.8.0",
    "structlog>=25.5.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.5.0",
    "types-PyJWT>=1.7.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=1.2.0",
    "black>=25.9.0",
    "ruff>=0.9.6",
]

[tool.setuptools]
packages = {find = {}}

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

